Add domino section UI contorl (reference prominic/Moonshine-IDE#646)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -49,6 +49,7 @@
 			import view.domino.surfaceComponents.components.DominoLabel;
 			import view.domino.surfaceComponents.components.DominoTable;
 			import view.domino.surfaceComponents.components.DominoParagraph;
+			import view.domino.surfaceComponents.components.DominoSection;
 			public var visualEditorType:String;
 			
 			[Bindable] private var collection:ArrayCollection;
@@ -65,7 +66,9 @@
 						new ComponentListItem("Label", DominoLabel),
 						new ComponentListItem("Table", DominoTable),
 						new ComponentListItem("Div", Div),
-						new ComponentListItem("Paragraph", DominoParagraph)
+						new ComponentListItem("Paragraph", DominoParagraph),
+						new ComponentListItem("Section", DominoSection)
+						
 						
 					]);
 				} else if (VisualEditorType.FLEX == visualEditorType)
