--- a/src/view/domino/propertyEditors/DominoSectionPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/DominoSectionPropertyEditor.mxml
@@ -6,6 +6,185 @@
 							      xmlns:forms="view.forms.*"
                                   xmlns:domino="view.domino.forms.*" 
                                   >
+                                  	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayList;
+			import mx.controls.listClasses.ListBaseContentHolder;
+			import mx.controls.Alert;
+
+			private var pre_label_var:String="normal";
+
+
+			private function getDominoFieldName(item:Object):String
+			{
+				return item.label;
+			}
+			
+			private function getDominoFieldTooltip(item:Object):String
+			{
+				return item.description;
+			}
+
+			private function excludeMultipleSelect(item:ListBaseContentHolder):void
+			{
+				var normal_flag:Boolean = false;
+				var execute_array:Array=null;
+				var normalSelect:Boolean=false;
+				//<!ENTITY % font.styles "normal | bold | italic | underline | 
+				//strikethrough | superscript | subscript | shadow | emboss | extrude">
+				var exclusions_normal:Array = ["bold","italic","underline","strikethrough","superscript","subscript","shadow","emboss","extrude"];
+				var exclusions_one_option:Array=["superscript","subscript","shadow","emboss","extrude"];
+				var exclusions_exclude_option:Array=["normal","superscript","subscript","shadow","emboss","extrude"];
+				var selected_array:Array=[];
+				var hasExlude:Boolean=false;
+				var hasExludeNum:Number=0;
+				if(item){
+					for (var i:int = 0; i < item.numChildren; i++){
+						var checkitem:Object = item.getChildAt(i);
+							if(checkitem){
+								//Alert.show("checkitem:"+checkitem.toString());
+								if(checkitem.hasOwnProperty("selected")&&checkitem.selected==true  ){
+									selected_array.push(checkitem.label);
+								}
+							}
+					}
+
+					//Alert.show("selected_array:"+selected_array.toString());
+					if(selected_array&& selected_array.length>0){
+						for (var i:int = 0; i < selected_array.length; i++){
+							if(selected_array[i].toString()=="normal"){
+								hasExlude=true;
+							}else if(exclusions_exclude_option.indexOf(selected_array[i].toString())>=0){
+								hasExludeNum++;
+							}
+						}
+						if(hasExludeNum>1){
+							hasExlude=true;
+						}
+					}
+					//Alert.show("hasExlude:"+hasExlude);
+					if(pre_label_var!=null){
+						for (var i:int = 0; i < item.numChildren; i++){
+							var checkitem:Object = item.getChildAt(i);
+							if(checkitem){
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkitem.hasOwnProperty("selected") ){
+								//	Alert.show("checkitem.label:"+checkitem.label);
+									if(checkitem.label==pre_label_var&& hasExlude==true){
+										//checkitem.enabled=false;
+										checkitem.selected=false;
+										
+									}		
+									
+								}
+							}
+							
+						}
+						//Alert.show("pre_label_var:"+pre_label_var);
+						pre_label_var=null;
+
+					}
+
+					
+
+					
+					
+					for (var i:int = 0; i < item.numChildren; i++){
+							var checkitem:Object = item.getChildAt(i);
+							if(checkitem){
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkitem.hasOwnProperty("selected") && checkitem.selected==true){
+								
+									if(checkitem.label=="normal"){
+										//Alert.show("checkitem.label:"+checkitem.label);
+										execute_array=exclusions_normal;
+										normalSelect=true;
+										pre_label_var="normal";
+										//break;
+									}
+									
+									
+								}
+							}
+							
+					}
+						//Alert.show("execute_array1:");
+
+					for (var i:int = 0; i < item.numChildren; i++){
+							var checkitem:Object = item.getChildAt(i);
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkitem.hasOwnProperty("selected") && checkitem.selected==true){
+								//Alert.show("checkitem:"+checkitem.label);
+								if(checkitem.label=="superscript"){
+									if(normalSelect==false)
+									pre_label_var="superscript"
+									if(execute_array==null)
+									execute_array=["subscript","shadow","emboss","extrude"];
+										//break;
+								}
+								if(checkitem.label=="subscript"){
+									if(normalSelect==false)
+									pre_label_var="subscript"
+									if(execute_array==null)
+									execute_array=["superscript","shadow","emboss","extrude"];
+									//break;
+								}
+								if(checkitem.label=="shadow"){
+									if(normalSelect==false)
+									pre_label_var="shadow"
+									if(execute_array==null)
+									execute_array=["superscript","subscript","emboss","extrude"];
+									//break;
+								}
+								if(checkitem.label=="emboss"){
+									if(normalSelect==false)
+									pre_label_var="emboss"
+									if(execute_array==null)
+									execute_array=["superscript","subscript","shadow","extrude"];
+									//break;
+								}
+								if(checkitem.label=="extrude"){
+									if(normalSelect==false)
+									pre_label_var="extrude"
+									if(execute_array==null)
+									execute_array=["superscript","subscript","shadow","emboss"];
+									//break;
+								}
+							}
+					}		
+					
+						//Alert.show("execute_array2:");
+
+					
+				
+
+					for (var j:int = 0; j < item.numChildren; j++){
+						var checkitem_child:Object = item.getChildAt(j);
+							if(checkitem_child.hasOwnProperty("selected") ){
+								if(execute_array!=null && execute_array.length>0){
+									if(execute_array.indexOf(checkitem_child.label)>=0){
+										checkitem_child.selected=false;
+										checkitem_child.enabled=true;
+									
+									}else{
+										//checkitem_child.selected=true;
+										checkitem_child.enabled=true;
+									}
+								}else{
+									checkitem_child.enabled=true;
+								}
+
+								if(normalSelect==false){
+									if(checkitem_child.label=="normal"){
+										checkitem_child.selected=false;
+									}
+								}
+							}
+					}
+				}
+			}
+		]]>
+	</fx:Script>
 
     <suportclasses:layout>
         <s:VerticalLayout gap="10" padding="10" horizontalAlign="contentJustify"/>
@@ -14,6 +193,50 @@
     <primeFaces:BasicsForm/>
     <forms:TextForm label="Title" textProperty="title"/>
 
+    <forms:TextForm label="Title Size" textProperty="size"
+					restrict="0-9"/>
+    	<forms:DropdownListForm id="ddl"
+                            label="Title Color" textProperty="color"
+                            collectionProperty="colors" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
+		
+		<domino:MultipleCheckbox label="Title Style:" 
+		optionExculdeFunction="excludeMultipleSelect"
+		collectionProperty="fontStyles" textProperty="fontStyle"/>	
+
+     <forms:DropdownListForm id="onread"
+                            label="Onread" textProperty="onread"
+                            collectionProperty="sectionTokens" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
+
+    <forms:DropdownListForm id="onedit"
+                            label="Onedit" textProperty="onedit"
+                            collectionProperty="sectionTokens" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	   
+
+ <forms:DropdownListForm id="onpreview"
+                            label="Onpreview" textProperty="onpreview"
+                            collectionProperty="sectionTokens" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	  
+ <forms:DropdownListForm id="onprint"
+                            label="Onprint" textProperty="onprint"
+                            collectionProperty="sectionTokens" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	 
+
+<forms:DropdownListForm id="accessfieldkind"
+                            label="File Kind" textProperty="accessfieldkind"
+                            collectionProperty="fieldKinds" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	 
+<forms:ToggleButtonSelectedForm label="Expanded" textProperty="expanded"/>
+
+<forms:ToggleButtonSelectedForm label="Show as text" textProperty="showastext"/>
+                        
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
     
