--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -127,6 +127,7 @@
 			if (this._selectedItem) this._selectedItem.isSelected = true;
 			this.resizer.target = this._selectedItem;
 			this.dispatchEvent(new Event(Event.CHANGE));
+			//Alert.show("set selectedItem 130");
 		}
 
 		public function get isVisualEditorFlex():Boolean
