--- a/src/view/forms/DominoFormulaForm.mxml
+++ b/src/view/forms/DominoFormulaForm.mxml
@@ -12,7 +12,7 @@
 
     <s:FormHeading skinClass="skins.FormHeadingSkin" height="0"/>
     <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
-    	
+    	<s:VGroup width="100%">
         <s:TextArea id="textInput"
                     text="{bindableText}" width="100%" minWidth="156" editable="true" selectable="true"
                     prompt="{prompt}"
@@ -22,8 +22,13 @@
                     	
 
   />
-       
-
+        <s:HGroup id="hgExistingWarning"
+				  width="100%" verticalAlign="middle"
+				  visible="{_hasError}">
+			<s:Image source="@Embed('/assets/delete.png')"/>
+			<s:Label text="{warningMessage}" width="100%"/>
+		</s:HGroup>
+    </s:VGroup>
     </s:FormItem>
 
     <fx:Script><![CDATA[
@@ -31,11 +36,24 @@
         import mx.binding.utils.ChangeWatcher;
         import mx.events.FlexEvent;
 
+        import flash.net.URLLoader;
+	    import flash.net.URLRequest;
+	    import flash.net.URLStream;
+        import flash.net.URLVariables;
+        import flash.net.URLRequestMethod;
+        import flash.events.Event;
+        import flash.events.NativeProcessExitEvent;
+        import flash.events.ProgressEvent;
+
+        import 	mx.utils.Base64Encoder;
+
         import view.interfaces.ISurfaceComponent;
+        import mx.controls.Alert; 
 
         private var _binding:ChangeWatcher;
 
         public var _hasError:Boolean=false;
+        public var warningMessage:String="";
 
         [Bindable]
         public var prompt:String;
@@ -120,6 +138,30 @@
             this.textInput.errorString = "";
             this.selectedItem[this._textProperty] = this.textInput.text;
             this.dispatchEvent(new Event(Event.CHANGE));
+            
         }
+        public var loader : URLLoader ;
+        public function checkFormula(formula:String) : void{
+            var req : URLRequest = new URLRequest("http://localhost:8080/dominoFormula/parse");
+            loader = new URLLoader();
+            var params : URLVariables = new URLVariables();
+            var encoder:Base64Encoder = new Base64Encoder();        
+            encoder.encode(formula);
+            params.formula = encoder.toString();
+            req.data = params;
+            req.method = URLRequestMethod.POST;
+            loader.addEventListener(ProgressEvent.PROGRESS,urlStream_progressHandler);
+            loader.addEventListener(Event.COMPLETE, urlLoader_complete);
+            loader.load(req);
+        }
+        protected function urlLoader_complete(evt:Event):void {
+            var dataSet:String  = loader.data;
+            Alert.show("dataSet:"+dataSet);
+            
+        }
+        protected function urlStream_progressHandler(event:ProgressEvent):void
+		{
+			dispatchEvent(event);
+		}
         ]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
